fixed ie bug vertical align banner

--- a/src/assets/sass/layout/_primary-banner.sass
+++ b/src/assets/sass/layout/_primary-banner.sass
@@ -1,6 +1,7 @@
 .primary-banner
   margin-top: -5em
-  min-height: 100%
+  min-height: 700px
+  height: 100%
   min-width: 100%
   z-index: -100
   display: flex
@@ -61,6 +62,7 @@
 +respond-above('md')
   .primary-banner
     min-height: 600px
+    height: 750px
     margin-top: -6.5em
     +e('deal-text')
       text-transform: uppercase
